@@ -4673,10 +4673,9 @@ void MainWindow::initDelayedElements()
     updateAndSaveSettings();
     Settings::settings()->checkSettings();
     QStringList warnings = Settings::settings()->takeInitWarnings();
-    for (const QString &warn : warnings)
+    for (const QString &warn : std::as_const(warnings))
         appendSystemLogWarning(warn);
 
-    checkGamsLicense();
     checkForEngineJob();
     connect(mSyslog, &SystemLogEdit::newMessage, this, &MainWindow::updateSystemLogTab);
 
@@ -7241,28 +7240,6 @@ bool MainWindow::enabledPrintAction()
     return focusWidget() == mRecent.editor()
             || ViewHelper::editorType(recent()->editor()) == EditorType::lxiLstChild
             || ViewHelper::editorType(recent()->editor()) == EditorType::txtRo;
-}
-
-void MainWindow::checkGamsLicense()
-{
-    const QString errorText = "No GAMS license found. You can install your license by"
-                              " copying the license information from the email you"
-                              " received after purchasing GAMS into your clipboard, and"
-                              " then open the license dialogue (Help / GAMS licensing)."
-                              " The license will be recognized and installed automatically."
-                              " For more options, please check the GAMS documentation.";
-    try {
-        support::GamsLicensingDialog::createLicenseFileFromClipboard(this);
-        auto dataPaths = support::GamsLicenseInfo().gamsDataLocations();
-        auto licenseFile = QDir::toNativeSeparators(CommonPaths::gamsLicenseFilePath(dataPaths));
-        if (QFileInfo::exists(licenseFile)) {
-            appendSystemLogInfo("GAMS license found at " + licenseFile);
-        } else {
-            appendSystemLogError(errorText);
-        }
-    }  catch (Exception *e) {
-        appendSystemLogError(e->what());
-    }
 }
 
 void MainWindow::checkSslLibrary()
