@@ -121,7 +121,6 @@ private:
     SolverConfigInfo mSolverInfo;
     palHandle_t mPAL;
     bool mLicenseAvailable = false;
-    QRegularExpression mRegEx;
     QRegularExpression mRegExHome;
 };
 
